syntax = "proto3";

package service;

import "user.proto";
import "error.proto";

message UserRegisterRequest {
	string name = 1;
	string email = 2;
	string password = 3;
}

message UserRegisterResponse { 
	oneof body {    
		User data = 1; 
		Error error = 2;
	}
}

